fixed layout bugs

--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,8 @@
 
 body {
     background-color: #000;
-    height: 100vh;
-    display: grid;
+    height: 90vh;
+    display: flex;
     place-content: center;
 }
 
@@ -22,17 +22,29 @@ body {
     display: grid;
     grid-template-columns:1fr repeat(2, 1fr) 1fr;
     grid-template-rows: fit-content repeat(3, 1fr);
-    max-width: 97vw;
-    min-height: 580px;
+    width: 97vw;
+    min-height: 530px;
+    max-height: 90vh;
     
+
+    max-width: 420px;
     
     user-select: none;
 }
 
 
 h1 {
-    grid-column: 2/4;
+    grid-column: 1/end;
     grid-row: 1;
+    place-content: center;
+    text-align: center;
+    padding: .5em 0 0 0;
+    white-space: nowrap; /* förhindra radbrytning */
+    color: transparent;
+    text-shadow: 2px 2px 0px rgb(96, 96, 96);
+    
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 2.5em;
 }
 
 /* STARTMENY */
@@ -47,7 +59,8 @@ h1 {
     grid-row: 2/4;
     
     position: relative;
-    padding: 2em;
+    padding: 1em 1em;
+    height: 95%;
 }
 
 /* RESULTAT-RUTAN */
@@ -61,7 +74,8 @@ h1 {
     border: 1px solid rgb(255, 217, 92);
     box-shadow: 0 0 30px rgb(251, 220, 118);
     border-radius: 10px;
-    /* min-height: 200px; */
+    height:60%;
+    white-space: nowrap;
 }
 
 .score-board {
@@ -96,10 +110,12 @@ h1 {
     
 }
 .result-info {
+    
     margin: 1em auto 2em auto;
     grid-row: 4;
     grid-column: 1 / span 2;
     font-size: 1.3em;
+    
 }
 
 /* KNAPPSATS */
